Don't remove focus outline, which looked weird before. Instead make it not weird by fixing the container's overflow, and blurring when clicked

--- a/core/app/assets/stylesheets/base/buttons.scss
+++ b/core/app/assets/stylesheets/base/buttons.scss
@@ -38,12 +38,9 @@
   }
 
   &:active {
+    outline: none; //prevents ugly webkit active state
     border-bottom-width: 0px;
     border-top-width: $largeButtonBorderWidth;
-  }
-
-  &:active, &:focus {
-    outline: none; //prevents ugly webkit active state
   }
 
   &.button-loading {
